@@ -4,6 +4,9 @@ Change history
 Release Candidate 3
 ===================
 
+- Included abstract Filter class, just as a helper to implement filters 
+  with a better interface (instead of IFilter.Process)
+
 - Fixed MR-165 "DataBind doesn't bind NullableDateTime"
 
 - Fixed MR-169
